# repl-toolkit

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  AGENT_BOOTSTRAP.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FORMATTING_UTILITIES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_ctrl_c_demo.py
.github/workflows/: dependencies.yml  docs.yml  examples.yml  lint.yml  quality.yml  release.yml  status.yml  test.yml
.github/workflows.backup/: release.yml  test.yml
docs/: ARCHITECTURE.md  GITHUB_ACTIONS_SETUP.md
examples/: advanced_usage.py  basic_usage.py  cancellable_backend.py  completion_demo.py  extensibility_demo.py  formatting_demo.py  headless_usage.py  image_paste_demo.py  image_utils_demo.py  multiline_completion_demo.py  path_completion_demo.py
repl_toolkit/: __init__.py  async_repl.py  formatting.py  headless.py  headless_repl.py  images.py  ptypes.py  types.py
repl_toolkit/actions/: __init__.py  action.py  handler.py  registry.py  shell.py
repl_toolkit/commands/: __init__.py  base.py  help_command.py  registry.py
repl_toolkit/completion/: README.md  prefix.py  shell_expansion.py
repl_toolkit/tests/: __init__.py  conftest.py  test_actions.py  test_async_repl.py  test_cancellation.py  test_completion.py  test_formatting.py  test_headless.py  test_image_utils.py  test_images.py  test_output_handling.py  test_types.py
tests/: __init__.py  test_async_repl.py  test_commands.py  test_headless.py  test_types.py
